@@ -1,5 +1,6 @@
 = 2.0.0.71 =
 * REST API rating stars & images upload not working - ADDED
+* Elementor archive title element not rendering correct title on GD pages - FIXED
 
 = 2.0.0.70 =
 * REST API allow search posts by GPS, IP and near address - ADDED
